src/flake8_bandit/snapshots/ruff__flake8_bandit__tests__S506_S506.py.snap
---
source: src/flake8_bandit/mod.rs
expression: checks
---
- kind:
    UnsafeYAMLLoad: ~
  location:
    row: 10
    column: 8
  end_location:
    row: 10
    column: 17
  fix: ~
  parent: ~
- kind:
    UnsafeYAMLLoad: Loader
  location:
    row: 24
    column: 23
  end_location:
    row: 24
    column: 34
  fix: ~
  parent: ~

