src/flake8_bandit/snapshots/ruff__flake8_bandit__tests__S508_S508.py.snap
---
source: src/flake8_bandit/mod.rs
expression: diagnostics
---
- kind:
    SnmpInsecureVesion: ~
  location:
    row: 4
    column: 36
  end_location:
    row: 4
    column: 37
  fix: ~
  parent: ~
- kind:
    SnmpInsecureVesion: ~
  location:
    row: 5
    column: 36
  end_location:
    row: 5
    column: 37
  fix: ~
  parent: ~

